cmake_minimum_required (VERSION 3.5)

add_subdirectory(app_config)
add_subdirectory(utilities)
add_subdirectory(zip)
add_subdirectory(time)
add_subdirectory(msg_parser)
add_subdirectory(tcp_connection)
add_subdirectory(config_manager)
add_subdirectory(mp3)
add_subdirectory(communication)
add_subdirectory(rpi_tcp_listener_app)
